refactor: move style file to root dir

--- a/CEDT-Homework-style.sty
+++ b/CEDT-Homework-style.sty
@@ -1,6 +1,5 @@
-% CEDT-Homework-style.sty
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{CEDT-Homework-style}[2025/08/14 CEDT Math Homework Style]
+\ProvidesPackage{CEDT-Homework-style}
 
 
 % =========================== Basic packages ===========================
