--- a/homework-02/main.tex
+++ b/homework-02/main.tex
@@ -1,5 +1,5 @@
 \documentclass[a4paper, 10pt]{article}
-\usepackage{CEDT-Homework-style}
+\usepackage{../CEDT-Homework-style}
 
 \usepackage{amsmath}
 \allowdisplaybreaks
