--- a/homework-03/main.tex
+++ b/homework-03/main.tex
@@ -1,5 +1,5 @@
 \documentclass[a4paper, 10pt]{article}
-\usepackage{../CEDT-Homework-style}
+\usepackage{CEDT-Homework-style}
 
 \usepackage{amsmath}
 \allowdisplaybreaks
@@ -7,30 +7,22 @@
 \setlength{\headheight}{14.49998pt}
 
 \begin{document}
-\subject[COURSE NAME]
-\hwtitle{X}{Week x - x}{AUTHOR}{ChatGPT}
+\subject[2110205 - Statistics for Computer Engineering]
+\hwtitle{3}{Week 3}{6733172621 Patthadon Phengpinij}{ChatGPT (for LaTeX styling and grammar checking)}
 
 
 % ================================================================================ %
-\section{PUT THE SECTION HERE}
+\section{Week 3: Intro to Discrete Random Variable}
 % ================================================================================ %
 
 
 
 % ================================================================================ %
-%                                    Problem 0x                                    %
+%                                    Problem 01                                    %
 % ================================================================================ %
 \begin{problem}
-Here's problem statement.
-\begin{codingbox}
-print("You can insert code like this")
-\end{codingbox}
-You can insert sub-problem
-\begin{subproblems}
-    \item Here's sub-problem a.
-    \item Here's sub-problem b.
-    \item Here's sub-problem c.
-\end{subproblems}
+A complex bet on a race has a payout value, \( X \), determined by which tier
+of horse wins. The probability mass function (PMF) is given below:
 \end{problem}
 
 \begin{solution}
